Added test level for cube game, implemented multiple UI callback types (editor and game)

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -21,7 +21,7 @@ Collapsed=0
 
 [Window][Default Scene]
 Pos=0,19
-Size=360,572
+Size=262,572
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -75,7 +75,7 @@ Collapsed=0
 
 [Window][Scripts Panel]
 Pos=0,593
-Size=360,487
+Size=262,487
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -85,14 +85,14 @@ Size=595,277
 Collapsed=0
 
 [Window][Log]
-Pos=362,878
-Size=1226,202
+Pos=264,878
+Size=1324,202
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Text Editor]
-Pos=977,19
-Size=611,857
+Pos=981,19
+Size=607,857
 Collapsed=0
 DockId=0x00000014,0
 
@@ -114,8 +114,13 @@ Collapsed=0
 DockId=0x00000011,0
 
 [Window][Game Settings]
-Pos=370,39
+Pos=1590,304
 Size=323,223
+Collapsed=0
+
+[Window][You Win!]
+Pos=295,398
+Size=547,242
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
@@ -126,10 +131,10 @@ Column 1  Weight=1.0000
 DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
   DockNode              ID=0x0000000F Parent=0x8B93E3BD SizeRef=1588,1061 Split=X
     DockNode            ID=0x0000000B Parent=0x0000000F SizeRef=1557,1061 Split=X
-      DockNode          ID=0x00000007 Parent=0x0000000B SizeRef=360,1061 Split=Y Selected=0x5911271C
-        DockNode        ID=0x0000000D Parent=0x00000007 SizeRef=360,572 Selected=0x5911271C
-        DockNode        ID=0x0000000E Parent=0x00000007 SizeRef=360,487 Selected=0xE07C8FB6
-      DockNode          ID=0x00000008 Parent=0x0000000B SizeRef=1226,1061 Split=X
+      DockNode          ID=0x00000007 Parent=0x0000000B SizeRef=262,1061 Split=Y Selected=0x5911271C
+        DockNode        ID=0x0000000D Parent=0x00000007 SizeRef=262,572 Selected=0x5911271C
+        DockNode        ID=0x0000000E Parent=0x00000007 SizeRef=262,487 Selected=0xE07C8FB6
+      DockNode          ID=0x00000008 Parent=0x0000000B SizeRef=1324,1061 Split=X
         DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=318,1061 Split=Y Selected=0x5911271C
           DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Selected=0x5911271C
           DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
@@ -137,8 +142,8 @@ DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 
           DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
           DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=Y
             DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=1300,857 Split=X
-              DockNode  ID=0x00000013 Parent=0x00000009 SizeRef=613,857 CentralNode=1
-              DockNode  ID=0x00000014 Parent=0x00000009 SizeRef=611,857 Selected=0xE6C27CC7
+              DockNode  ID=0x00000013 Parent=0x00000009 SizeRef=715,857 CentralNode=1
+              DockNode  ID=0x00000014 Parent=0x00000009 SizeRef=607,857 Selected=0xE6C27CC7
             DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=1300,202 Selected=0x64F50EE5
     DockNode            ID=0x0000000C Parent=0x0000000F SizeRef=361,1061 Selected=0x5024C6BC
   DockNode              ID=0x00000010 Parent=0x8B93E3BD SizeRef=330,1061 Split=Y Selected=0xA7C79B29
