Added second level to cube-game and tested scene switching functionality

--- a/data/editor.ini
+++ b/data/editor.ini
@@ -23,7 +23,7 @@ Collapsed=0
 Pos=0,19
 Size=262,572
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000007,0
 
 [Window][Atmosphere Settings]
 Pos=0,508
@@ -43,8 +43,8 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Renderer Panel]
-Pos=1590,552
-Size=330,528
+Pos=1590,19
+Size=330,857
 Collapsed=0
 DockId=0x00000012,0
 
@@ -74,10 +74,10 @@ Size=345,243
 Collapsed=0
 
 [Window][Scripts Panel]
-Pos=0,593
-Size=262,487
+Pos=0,552
+Size=311,528
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000016,0
 
 [Window][Script Editor]
 Pos=1078,117
@@ -85,8 +85,8 @@ Size=595,277
 Collapsed=0
 
 [Window][Log]
-Pos=264,878
-Size=1324,202
+Pos=313,878
+Size=1607,202
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -109,44 +109,57 @@ Collapsed=0
 
 [Window][Game Object Panel]
 Pos=1590,19
-Size=330,531
+Size=330,429
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000010,0
 
 [Window][Game Settings]
-Pos=1590,304
+Pos=320,34
 Size=323,223
 Collapsed=0
 
 [Window][You Win!]
-Pos=295,398
+Pos=760,291
 Size=547,242
 Collapsed=0
+
+[Window][Level 2]
+Pos=60,60
+Size=177,327
+Collapsed=0
+
+[Window][Scene]
+Pos=0,19
+Size=311,531
+Collapsed=0
+DockId=0x00000015,0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
-  DockNode              ID=0x0000000F Parent=0x8B93E3BD SizeRef=1588,1061 Split=X
-    DockNode            ID=0x0000000B Parent=0x0000000F SizeRef=1557,1061 Split=X
-      DockNode          ID=0x00000007 Parent=0x0000000B SizeRef=262,1061 Split=Y Selected=0x5911271C
-        DockNode        ID=0x0000000D Parent=0x00000007 SizeRef=262,572 Selected=0x5911271C
-        DockNode        ID=0x0000000E Parent=0x00000007 SizeRef=262,487 Selected=0xE07C8FB6
-      DockNode          ID=0x00000008 Parent=0x0000000B SizeRef=1324,1061 Split=X
-        DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=318,1061 Split=Y Selected=0x5911271C
-          DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Selected=0x5911271C
-          DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
-        DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=1312,1061 Split=X
-          DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
-          DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=Y
-            DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=1300,857 Split=X
-              DockNode  ID=0x00000013 Parent=0x00000009 SizeRef=715,857 CentralNode=1
-              DockNode  ID=0x00000014 Parent=0x00000009 SizeRef=607,857 Selected=0xE6C27CC7
-            DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=1300,202 Selected=0x64F50EE5
-    DockNode            ID=0x0000000C Parent=0x0000000F SizeRef=361,1061 Selected=0x5024C6BC
-  DockNode              ID=0x00000010 Parent=0x8B93E3BD SizeRef=330,1061 Split=Y Selected=0xA7C79B29
-    DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=572,531 Selected=0xA7C79B29
-    DockNode            ID=0x00000012 Parent=0x00000010 SizeRef=572,528 Selected=0x32FCB9E3
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
+  DockNode                  ID=0x0000000D Parent=0x8B93E3BD SizeRef=311,1061 Split=Y Selected=0xE192E354
+    DockNode                ID=0x00000015 Parent=0x0000000D SizeRef=371,531 Selected=0xE192E354
+    DockNode                ID=0x00000016 Parent=0x0000000D SizeRef=371,528 Selected=0xE07C8FB6
+  DockNode                  ID=0x0000000E Parent=0x8B93E3BD SizeRef=1607,1061 Split=X
+    DockNode                ID=0x0000000F Parent=0x0000000E SizeRef=1275,1061 Split=X
+      DockNode              ID=0x0000000B Parent=0x0000000F SizeRef=1557,1061 Split=X
+        DockNode            ID=0x00000007 Parent=0x0000000B SizeRef=262,1061 Selected=0x5911271C
+        DockNode            ID=0x00000008 Parent=0x0000000B SizeRef=1324,1061 Split=X
+          DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=318,1061 Split=Y Selected=0x5911271C
+            DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=292,307 Selected=0x5911271C
+            DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=292,752 Selected=0x3D5DC369
+          DockNode          ID=0x00000002 Parent=0x00000008 SizeRef=1312,1061 Split=X
+            DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=388,1061 Selected=0x1D09C2A5
+            DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1530,1061 Split=X
+              DockNode      ID=0x00000013 Parent=0x00000004 SizeRef=715,857 Split=Y
+                DockNode    ID=0x00000009 Parent=0x00000013 SizeRef=1275,857 Split=X
+                  DockNode  ID=0x00000011 Parent=0x00000009 SizeRef=1275,857 CentralNode=1
+                  DockNode  ID=0x00000012 Parent=0x00000009 SizeRef=330,857 Selected=0x32FCB9E3
+                DockNode    ID=0x0000000A Parent=0x00000013 SizeRef=1275,202 Selected=0x64F50EE5
+              DockNode      ID=0x00000014 Parent=0x00000004 SizeRef=607,857 Selected=0xE6C27CC7
+      DockNode              ID=0x0000000C Parent=0x0000000F SizeRef=361,1061 Selected=0x5024C6BC
+    DockNode                ID=0x00000010 Parent=0x0000000E SizeRef=330,1061 Selected=0xA7C79B29
 
